--- a/templates/Final_search_template.html
+++ b/templates/Final_search_template.html
@@ -10,19 +10,6 @@
             </div>
         </div>   
 
-        <div class="row">
-            <div class="well=spaced">
-            <p>These recipes will work for:
-                        <ul>
-                            <li>Diets: {% for diet in party_diets %}{{  diet  }}{% if not loop.last %}, {% endif %}
-                            {% endfor %}</li>
-                            <li>Intolerances/Allergies: {% for intol in intolerances %}{{  intol  }}{% if not loop.last %}, {% endif %}
-                            {% endfor %}</li>
-                            <li>Ingredients to avoid: {% for avoid in avoids %}{{  avoid  }}{% if not loop.last %}, {% endif %}{% endfor %}</li>
-                        </ul>
-            </div>
-        </div>
-
 
         <div class="row">
             <h4>Choose a new cuisine or course:</h4>
@@ -35,60 +22,48 @@
     <form class="horizontal" action="/reloadsearchrecipes" method="POST">
                     
     <div class="form-group">
-        <label>Pick a different cuisine:
-            <select class="form-control">
-                <option value="None" name="cuisine" selected>Any</option>
+        <label for="sel1">Pick a different cuisine:</label>
+            <select class="form-control" name="cuisine" id="sel1">
                 {% for cuisine in cuisine_list %}
-                <option value="{{ cuisine.cuisine_id  }}" name="cuisine">{{  cuisine.cuisine_name  }}</option>
+                <option value="{{  cuisine.cuisine_id  }}"{% if cuisine.cuisine_id==25 %} selected="selected"{% endif %} >{{  cuisine.cuisine_name  }}</option>
                 {% endfor %}        
-            </select></label>   
-    </div> 
-    <div>
-        <label>Pick a different course:
-        <select class="form-control">
+            </select>
+    <br> 
+        <label for="sel2">Pick a different course:</label>
+        <select class="form-control" name="course" id="sel2">
             {% for course in course_list %}
-        <option value="{{ course.course_id  }}"{% if course.course_id==1 %} selected="selected"{% endif %} name="course">{{  course.course_name  }}</option>
+        <option value="{{ course.course_id  }}"{% if course.course_id==1 %} selected="selected"{% endif %}>{{  course.course_name  }}</option>
             {% endfor %}
-         </select></label>
+         </select>
     </div>
 <hr>
             <h4>Deselect a food preference:</h4>
             <p><i>You may need to make more dishes to make sure everyone eats.</i></p>
         <h4 class="form-control-static">Diets:</h4>
+        
+        {% for diet in party_diets %}  
         <div class="checkbox">
-        {% for diet in party_diets %}                 
             <label>
-                <input type="checkbox" name="diets" value="{{  diet }}" checked><label><strong>{{  diet|capitalize  }}</strong><br>
-                {% for guest in party.users %}
-                     {% if guest.diet.diet_type == diet %}
-                    
-                        {{  guest.first_name  }} {{  guest.last_name  }}{% if not loop.last %}, {% endif %}
-                    
-                    {% else %}{% endif %}
-                {% endfor %}
-                </label>
+                <input type="checkbox" name="diets" value="{{  diet }}" checked><strong>{{  diet|capitalize  }}</strong><br>
+                {% for guest in party.users %}{% if guest.diet.diet_type == diet %}{{  guest.first_name  }} {{  guest.last_name  }}<br>{% endif %}{% endfor %}
             
-            </label>
-        {% endfor %}
-
+            </label><br>
+        
         </div>
+        {% endfor %}
 
         <h4 class="form-control-static">Intolerances/Allergies:</h4>
         <div class="checkbox">
         {% for intol in party_intols %}                 
             <label>
-                <input type="checkbox" name="intols" value="{{  intol }}" checked><label><strong>{{  intol|capitalize  }}</strong><br>
+                <input type="checkbox" name="intols" value="{{  intol }}" checked><strong>{{  intol|capitalize  }}</strong><br>
                 {% for guest in party.users %}
                     {% for intolerance in guest.intolerances %}
-                    
                      {% if intolerance.intol_name == intol %}
-                    
-                        {{  guest.first_name  }} {{  guest.last_name  }}{% if not loop.last %}, {% endif %}
-                    
-                    {% else %}{% endif %}
+                        {{  guest.first_name  }} {{  guest.last_name  }}<br>
+                    {% endif %}
                 {% endfor %}    
                 {% endfor %}
-                </label>
             
             </label><br>
         {% endfor %}
@@ -100,18 +75,16 @@
         <div class="checkbox">
         {% for avoid in party_avoids %}                 
             <label>
-                <input type="checkbox" name="avoids" value="{{  avoid }}" checked><label><strong>{{  avoid|capitalize  }}</strong><br>
+                <input type="checkbox" name="avoids" value="{{  avoid }}" checked><strong>{{  avoid|capitalize  }}</strong><br>
                 {% for guest in party.users %}
                     {% for guestavoid in guest.avoidances %}
                     
                      {% if guestavoid.ingredient == avoid %}
                     
                         {{  guest.first_name  }} {{  guest.last_name  }}{% if not loop.last %}, {% endif %}
-                    
-                    {% else %}{% endif %}
+                    {% endif %}
                 {% endfor %}    
-                {% endfor %}
-                </label>
+            {% endfor %}
             
             </label><br>
         {% endfor %}
@@ -131,7 +104,9 @@
     <div class="col-md-6 recipe">
         <h4>{{ responses['response'][i].get('title') }}</h4>
             <form action="/see_recipe" method="POST">
-            <input type="hidden" name="party_id" value="{{ party.party_id  }}">
+            <input type="hidden" name="party_diets" value="{{ party_diets|join(', ')  }}">
+            <input type="hidden" name="party_avoids" value="{{ party_avoids|join(', ')  }}">
+            <input type="hidden" name="party_intols" value="{{ party_intols|join(', ')  }}">
             <input type="hidden" name="recipe_id" value="{{ responses['response'][i].get('recipe_id') }}">
             <input type="hidden" name="title" value="{{ responses['response'][i].get('title') }}">
             <input type="hidden" name="recipe_image_url" value="{{ responses['response'][i].get('image_url') }}">
