--- a/templates/recipe_profile.html
+++ b/templates/recipe_profile.html
@@ -1,7 +1,15 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Kind Table</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/site.css">
+    <script src="http://code.jquery.com/jquery.js"></script>
+</head>
 
-{% extends 'base.html' %}
-{% block content %}
-<div class="container">
+
+<div class="container-fluid">
 <h1>{{  this_recipe.title  }}</h1>
 
 <p>This recipe is saved to the RecipeBox for <a href="/party_profile/{{  party.party_id  }}">{{  party.title  }}</a>
@@ -10,31 +18,18 @@
 
 <p>Safe for:</p>
 <ul>
-    <li>Diets: {% for diet in diets %}
-                    {{ diet }}
-                    {% if not loop.last %}
-                        ,
-                    {% endif %}
-                    {% endfor %}</li>
-    <li>Intolerances: {% for intolerance in intolerances %}
-                    {{ intolerance }}
-                    {% if not loop.last %}
-                        ,
-                    {% endif %}
-                    {% endfor %}</li>
-    <li>Avoids: {% for avoid in avoid %}
-                    {{ avoid }}
-                    {% if not loop.last %}
-                        ,
-                    {% endif %}
-                    {% endfor %}</li>
-   
+    {% for key, value in works_for.iteritems() %}
+    {{  key  }}: {{  value  }}<br>{% endfor %}</li>
+   </ul>
 <div>
     
 <div>
 <iframe sandbox="allow-same-origin allow-scripts" src="{{ this_recipe.recipe_url}}" width=100% height=500></iframe>
 </div>
 
-</div>
 
-{% endblock %}
+
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+</div>
+</body>
+</html>
