--- a/templates/recipe_profile.html
+++ b/templates/recipe_profile.html
@@ -19,12 +19,28 @@
 <p>Safe for:</p>
 <ul>
     {% for key, value in works_for.iteritems() %}
-    {{  key  }}: {{  value  }}<br>{% endfor %}</li>
+    {{  key  }}: {% for each in value %}{{  each  }}{% if not loop.last %}, {% endif %}{% endfor %}<br>{% endfor %}</li>
    </ul>
+<div>
+
+<ul>
+    <li><strong>Ingredients</strong></li>
+        <ul>{% for each in ingredients %}
+            <li>{{  each.decode('utf-8')  }}</li>
+    {% endfor %}</ul>
+
+</ul>
+
+<ul>
+    <li><strong>Instructions</strong></li>
+    <ul>{% for each in instructions %}
+    <li>{{  each.decode('utf-8') }}</li>
+    {% endfor %}</ul>
+</ul>
 <div>
     
 <div>
-<iframe sandbox="allow-same-origin allow-scripts" src="{{ this_recipe.recipe_url}}" width=100% height=500></iframe>
+<img src="{{  this_recipe.recipe_image_url  }}" alt="{{  this_recipe.title  }}" class="img-fluid" >
 </div>
 
 
